--- a/index.html
+++ b/index.html
@@ -5,12 +5,25 @@
     <title>Барбершоп Бородинский</title>
   </head>
   <body>
+    <main class="conyainer">
+      <section class="modal modal-login">
+        <h2>Личный кабинет</h2>
+        <p>Введите свой логин и пароль</p>
+        <form class="login-form" action="https://echo.htmlacademy.ru" method="post">
+          <p>
+        <input class="login-icon-user" type="text" name="login" placeholder="Логин">
+        </p>
+        <p>
+          <input class="login-icon-password" type="password" name="login" placeholder="Пароль">
+        </p>
+        </form>
+        <button class="modal-close" type="button">Закрыть</button>
+      </section>
+    </main>
     <header class="main header">
-        
-      <nav class="main-navigation">
+        <nav class="main-navigation">
         <a class="main-header-logo">
-          <img stc="img/index-logo.svg"width="368"height="153"alt="Логотип Барберщопа Бородинский">
-
+          <img stc="img/index-logo.svg"width="368"height="153"alt="Логотип Барбершопа Бородинский">
         </a>
         <ul class="site-navigation">
           <li><a href="info.html">Информация</a></li>
@@ -57,12 +70,15 @@
           </li>
           </ul>
           <a class="button" href="news.html">Все новости</a>
+        </section>
+        <section class="galery-content">
           <h2>Фотогалерея</h2>
           <figure class="gallery-content">
-          <a href="#"><img src="img/studio.jpg" width="286"height="164" alt="Интерьер"> </a>
+          <a href="#">
+            <img src="img/studio.jpg" width="286"height="164" alt="Интерьер"> </a>
           </figure>
-          <span class="button gallery-button galery-button-back">Назаад</span>
-          <span class="button gallery-button galery-button-back">Вперед</span>
+          <button class="button gallery-button galery-button-back">Назаад</button>
+          <button class="button gallery-button galery-button-back">Вперед</button>
            </section>
            <section class="contacts">
              <h2>Контактная информация</h2>
@@ -72,13 +88,29 @@
           <p>время работы<br>
           пн-пт: с 10:00 до 22:00<br>
         сб-вс: с 10:00 до 19:00</p>
-        <a class="button" href="map.html">как проехать</a>
+        <a class="button" href="map.html">Как проехать</a>
         <a class="button" href="contacts.html">Обратная связь</a>
            </section>
            <section class="appointment">
              <h2>Записаться</h2>
              <p class="appointment-info">Укажите желаемую дату и время и мы свяжемся с Вами для подтверждения брони</p>
-             <----forms--->
+             <form class="appointment-form" action="https://echo.htmlacademy.ru" method="post">
+              <p class="appointment-item"><label for="appointment-date">Дата</label>
+                <input id="appointment-date" type="text" name="date" value="" placeholder="08.10.2017">
+                </p>
+                <p class="appointment-item">
+                  <label for="appointment-time">Время</label>
+                  <input id="appointment-time" type="text" name="time" value="" placeholder="10:00">
+                  </p>
+                  <p class="appointment-item">
+                      <label for="appointment-name">Ваше имя</label>
+                      <input id="appointment-name" type="text" name="name" value="" placeholder="Борода">
+                      </p>
+                      <p class="appointment-item">
+                          <label for="appointment-phone">Телефон</label>
+                          <input id="appointment-phone" type="text" name="phone" value="" placeholder="+7 312 53 45">
+                          </p>
+                          <button class="button" type="submit">Отправить</button>
            </section>
     </main>
     <footer class=" main-footer">
